@@ -2059,16 +2059,9 @@ break|break;
 default|default:
 throw|throw
 operator|new
-name|SolrException
-argument_list|(
-name|SolrException
-operator|.
-name|ErrorCode
-operator|.
-name|getErrorCode
+name|RemoteSolrException
 argument_list|(
 name|httpStatus
-argument_list|)
 argument_list|,
 literal|"Server at "
 operator|+
@@ -2088,6 +2081,8 @@ argument_list|()
 operator|.
 name|getReasonPhrase
 argument_list|()
+argument_list|,
+literal|null
 argument_list|)
 throw|;
 block|}
@@ -2282,18 +2277,13 @@ expr_stmt|;
 block|}
 throw|throw
 operator|new
-name|SolrException
-argument_list|(
-name|SolrException
-operator|.
-name|ErrorCode
-operator|.
-name|getErrorCode
+name|RemoteSolrException
 argument_list|(
 name|httpStatus
-argument_list|)
 argument_list|,
 name|reason
+argument_list|,
+literal|null
 argument_list|)
 throw|;
 block|}
@@ -2896,6 +2886,41 @@ name|useMultiPartPost
 operator|=
 name|useMultiPartPost
 expr_stmt|;
+block|}
+comment|/**    * Subclass of SolrException that allows us to capture an arbitrary HTTP    * status code that may have been returned by the remote server or a     * proxy along the way.    */
+DECL|class|RemoteSolrException
+specifier|protected
+specifier|static
+class|class
+name|RemoteSolrException
+extends|extends
+name|SolrException
+block|{
+comment|/**      * @param code Arbitrary HTTP status code      * @param msg Exception Message      * @param th Throwable to wrap with this Exception      */
+DECL|method|RemoteSolrException
+specifier|public
+name|RemoteSolrException
+parameter_list|(
+name|int
+name|code
+parameter_list|,
+name|String
+name|msg
+parameter_list|,
+name|Throwable
+name|th
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|code
+argument_list|,
+name|msg
+argument_list|,
+name|th
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
