@@ -342,6 +342,36 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrException
+operator|.
+name|ErrorCode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|CommonParams
@@ -517,7 +547,19 @@ name|parameters
 operator|=
 literal|null
 expr_stmt|;
+name|errorCode
+operator|=
+literal|null
+expr_stmt|;
 block|}
+DECL|field|errorCode
+specifier|public
+specifier|static
+name|Integer
+name|errorCode
+init|=
+literal|null
+decl_stmt|;
 DECL|field|lastMethod
 specifier|public
 specifier|static
@@ -553,6 +595,21 @@ name|parameters
 init|=
 literal|null
 decl_stmt|;
+DECL|method|setErrorCode
+specifier|public
+specifier|static
+name|void
+name|setErrorCode
+parameter_list|(
+name|Integer
+name|code
+parameter_list|)
+block|{
+name|errorCode
+operator|=
+name|code
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 DECL|method|doGet
@@ -716,6 +773,40 @@ argument_list|(
 name|req
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|errorCode
+condition|)
+block|{
+try|try
+block|{
+name|resp
+operator|.
+name|sendError
+argument_list|(
+name|errorCode
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"sendError IO fail in DebugServlet"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
 block|}
 block|}
 annotation|@
@@ -993,6 +1084,138 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+block|}
+comment|/**    * test that SolrExceptions thrown by HttpSolrServer can    * correctly encapsulate http status codes even when not on the list of    * ErrorCodes solr may return.    */
+DECL|method|testSolrExceptionCodeNotFromSolr
+specifier|public
+name|void
+name|testSolrExceptionCodeNotFromSolr
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
+specifier|final
+name|int
+name|status
+init|=
+literal|527
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|status
+operator|+
+literal|" didn't generate an UNKNOWN error code, someone modified the list of valid ErrorCode's w/o changing this test to work a different way"
+argument_list|,
+name|ErrorCode
+operator|.
+name|UNKNOWN
+argument_list|,
+name|ErrorCode
+operator|.
+name|getErrorCode
+argument_list|(
+name|status
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|HttpSolrServer
+name|server
+init|=
+operator|new
+name|HttpSolrServer
+argument_list|(
+name|jetty
+operator|.
+name|getBaseUrl
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"/debug/foo"
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|DebugServlet
+operator|.
+name|setErrorCode
+argument_list|(
+name|status
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|SolrQuery
+name|q
+init|=
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"foo"
+argument_list|)
+decl_stmt|;
+name|server
+operator|.
+name|query
+argument_list|(
+name|q
+argument_list|,
+name|METHOD
+operator|.
+name|GET
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Didn't get excepted exception from oversided request"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected exception status code"
+argument_list|,
+name|status
+argument_list|,
+name|e
+operator|.
+name|code
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|DebugServlet
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
